[gd_scene load_steps=5 format=3 uid="uid://bhm3gdl6faown"]

[ext_resource type="Script" path="res://Game_State.gd" id="1_8e7rl"]

[sub_resource type="LabelSettings" id="LabelSettings_f3q0u"]
line_spacing = 5.0
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fto8g"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rtlrx"]
line_spacing = 4.0
font_size = 18

[node name="Game" type="Node2D"]
script = ExtResource("1_8e7rl")

[node name="Timer" type="Timer" parent="."]

[node name="Top_Screen" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Top_Screen"]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -189.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="Top_Screen/MarginContainer"]
layout_mode = 2
color = Color(0.258824, 0.34902, 1, 0.380392)

[node name="Sell_Phase_Transition" type="Label" parent="Top_Screen/MarginContainer"]
visible = false
custom_minimum_size = Vector2(1152, 136)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 1
text = "SELL PHASE HAS STARTED!
CHOOSE A LOCATION TO SELL YOUR ITEMS..."
label_settings = SubResource("LabelSettings_f3q0u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="Buy_Phase_Transition" type="Label" parent="Top_Screen/MarginContainer"]
visible = false
custom_minimum_size = Vector2(1152, 136)
layout_mode = 2
text = "BUY PHASE HAS STARTED!
PURCHASE ITEMS BASED ON THE WORLD EVENT GOING ON AND MARKET INTERESTS... AND MAYBE PERSONAL INTEREST"
label_settings = SubResource("LabelSettings_f3q0u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Game_Start_Screen" type="Label" parent="Top_Screen/MarginContainer"]
custom_minimum_size = Vector2(1152, 230)
layout_mode = 2
size_flags_vertical = 1
text = "Welcome to my Flipper Rivals!
This is a short game about buying items and selling them for a profit to pay off your loan.
Pay attention to the amount of money you have, the time left per phase and the loan payment due.
Click Anywhere to Start..."
label_settings = SubResource("LabelSettings_f3q0u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Start_Game_Button" type="Button" parent="Top_Screen/MarginContainer/Game_Start_Screen"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 646.0

[node name="Event_Info" type="Label" parent="Top_Screen/MarginContainer"]
visible = false
custom_minimum_size = Vector2(1152, 136)
layout_mode = 2
text = "Event Title
Description
Types Affected: 
Traits Affected: 
a
a
a
a"
label_settings = SubResource("LabelSettings_f3q0u")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Item_Grid" type="GridContainer" parent="Top_Screen/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 60
columns = 5

[node name="Player_Inventory" type="GridContainer" parent="Top_Screen/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 60
columns = 5

[node name="MarginContainer" type="MarginContainer" parent="Top_Screen/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 8

[node name="Top_Panel" type="Panel" parent="Top_Screen/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fto8g")

[node name="Gold" type="Label" parent="Top_Screen/MarginContainer/MarginContainer/Top_Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -11.5
offset_right = 206.0
offset_bottom = 11.5
grow_vertical = 2
text = "Gold: XXX"
vertical_alignment = 1

[node name="Loan" type="Label" parent="Top_Screen/MarginContainer/MarginContainer/Top_Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -11.5
offset_right = 100.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Loan: XXXXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time_Display" type="Label" parent="Top_Screen/MarginContainer/MarginContainer/Top_Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -11.5
offset_right = -5.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Time Left: XXX"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Descriptive_Textbox" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Descriptive_Textbox"]
layout_direction = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -189.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Descriptive_Textbox/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fto8g")

[node name="MarginContainer" type="MarginContainer" parent="Descriptive_Textbox/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Descriptive_Textbox/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="Descriptive_Textbox/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Hello"
label_settings = SubResource("LabelSettings_rtlrx")
